# satoshiflow

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/satoshiflow_backend/: Cargo.toml  satoshiflow_backend.did
src/satoshiflow_backend/src/: lib.rs
src/satoshiflow_frontend/: index.html  package-lock.json  package.json  vite.config.js
src/satoshiflow_frontend/src/: App.jsx  index.css  index.scss
src/satoshiflow_frontend/src/components/: Navbar.jsx  QuickActionCard.jsx  StatCard.jsx  StreamCard.jsx
src/satoshiflow_frontend/src/contexts/: AuthContext.jsx  NotificationContext.jsx
src/satoshiflow_frontend/src/pages/: Analytics.jsx  CreateStream.jsx  Dashboard.jsx  LandingPage.jsx  Notifications.jsx  StreamDetails.jsx  StreamList.jsx  Templates.jsx
src/satoshiflow_frontend/src/utils/: getBackendActor.js
