[package]
name = "satoshiflow_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "*"
ic-cdk = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
